--- a/m03/style.css
+++ b/m03/style.css
@@ -19,7 +19,7 @@ p {
     font-weight: normal;
     font-style: normal;
     font-size: 200%;  
-
+}
 /* Styling for <i> */
 i {
     color: darkgreen;  
