--- a/m05/css/style.css
+++ b/m05/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 h1 {
-    background-image: url('images/Bullseye-logo.png');
+    background-image: url('../images/Bullseye-logo');
     background-repeat: no-repeat;
     text-indent: 100%;
     white-space: nowrap;
